--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@ h3{
 <table align="center"  cell-spacing="none">
 <tr>
 <td>
-<img src="pics/v1.png" height="160" width="160" hspace="60" vspace="60"></td>
+<img src="E:\B323\pics\v1.png" height="160" width="160" hspace="60" vspace="60"></td>
 <td>
 <p>
 YUVAN SHANKAR<br>
