--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@ h3{
 <table align="center"  cell-spacing="none">
 <tr>
 <td>
-<img src="E:\B323\pics\v1.png" height="160" width="160" hspace="60" vspace="60"></td>
+<img src="v1.png" height="160" width="160" hspace="60" vspace="60"></td>
 <td>
 <p>
 YUVAN SHANKAR<br>
@@ -68,6 +68,8 @@ UPSC ASPIRANT 💝</p></td></tr><tr>
 <BR> <a href="https://instagram.com/le_.yuvan._?igshid=MzNINGNkZWQ4Mg==">CLICK HERE!!!!</a><br>
 <hr color="violet" width="95%"><br>
 <h3>DEVELOPED USING ONLY BY HTML</H3>
+ </body>
+ </html>
 
 
 
